tdf#100691 sw Table of Contents: remove hidden text

part of chapter, section etc. names.

See also commit daf2a7d957c829c551754871a3545495c0f76bc0
(tdf#61154 sw Table of Contents: remove tracked deletion).

Change-Id: I96f2308b1b5241f62bcb0091aae32757caeab73b